crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__bundled_module.snap
---
source: crates/alder-parse/src/item/import.rs
description: import json
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: ModulePath {
                        root: StandardLibrary,
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                },
                                value: "json",
                            },
                        ],
                    },
                },
                tail: Module,
            },
        ),
    },
}
