crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__bundled_nested_module.snap
---
source: crates/alder-parse/src/item/import.rs
description: import http/router as routing
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 19,
                        },
                    },
                    value: ModulePath {
                        root: StandardLibrary,
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                },
                                value: "http",
                            },
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                                value: "router",
                            },
                        ],
                    },
                },
                tail: Alias(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 30,
                            },
                        },
                        value: "routing",
                    },
                ),
            },
        ),
    },
}
