crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_alias_uppercase.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @alder/http as H
---
Import(
    Alias(
        1,
        23,
    ),
    1,
    1,
)
