crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_bad_root.snap
---
source: crates/alder-parse/src/item/import.rs
description: import http
---
Import(
    Path(
        Start(
            1,
            8,
        ),
        1,
        8,
    ),
    1,
    1,
)
