crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_bad_segment.snap
---
source: crates/alder-parse/src/item/import.rs
description: import ~/db/Users
---
Import(
    Path(
        Segment(
            1,
            13,
        ),
        1,
        8,
    ),
    1,
    1,
)
