crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_group_alias.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import (json as, io)"
---
Import(
    Alias(
        1,
        16,
    ),
    1,
    1,
)
