crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_group_double_comma.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import (json,,io)"
---
Import(
    Path(
        Start(
            1,
            14,
        ),
        1,
        14,
    ),
    1,
    1,
)
