crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_group_empty.snap
---
source: crates/alder-parse/src/item/import.rs
description: import ()
---
Import(
    Path(
        Start(
            1,
            9,
        ),
        1,
        9,
    ),
    1,
    1,
)
