crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_group_separator.snap
---
source: crates/alder-parse/src/item/import.rs
description: import (json io)
---
Import(
    GroupEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 8,
            },
            boundary: Position {
                line: 1,
                column: 13,
            },
            unexpected: Position {
                line: 1,
                column: 14,
            },
        },
    ),
    1,
    1,
)
